--- a/Loan_prediction/Bank_Loan_Prediction.ipynb
+++ b/Loan_prediction/Bank_Loan_Prediction.ipynb
@@ -799,6 +799,21 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "bfc6e840",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the features for training\n",
+    "selected_features = ['Age', 'Education', 'Income', 'CreditCard', 'Mortgage']\n",
+    "\n",
+    "# Split the data into features (X) and target (y)\n",
+    "X = data[selected_features]\n",
+    "y = data['Personal Loan']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "c69e4b76",
    "metadata": {},
    "outputs": [],
@@ -811,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a2e024bd",
    "metadata": {},
    "outputs": [],
@@ -824,31 +839,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "27255b7f",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression()"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "04640023",
    "metadata": {},
    "outputs": [
@@ -881,7 +882,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.906\n"
+      "0.937\n"
      ]
     }
    ],
@@ -908,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "458adac3",
    "metadata": {},
    "outputs": [
@@ -918,7 +919,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +940,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.895\n"
+      "0.954\n"
      ]
     }
    ],
@@ -955,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "30a1dc8c",
    "metadata": {},
    "outputs": [
@@ -965,7 +966,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "64b391ed",
    "metadata": {},
    "outputs": [
@@ -986,7 +987,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "0.975\n"
      ]
     }
    ],
@@ -1002,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "b4d25a04",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1013,7 @@
        "['loan_prediction_model.pkl']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
